Added option to declare default styles